src/pages/manga/styles.scss
.title {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-grow: 1;
  width: 100%;
  position: relative;
  --banner-height: 13.5rem;
  --navbar-height: 53px;
  --banner-overlay-gradient: linear-gradient(60deg, rgba(0, 0, 0, 0.64) 50%, transparent);
  padding: 0 8px;
  &__banner-wrp {
    display: block;
    position: absolute;
    height: calc(var(--banner-height) + var(--navbar-height));
    top: calc(var(--navbar-height) * -1);
    // z-index: -1;
    right: 0;
    left: 0;
    clip: rect(0, auto, auto, 0);
    -webkit-clip-path: inset(0 0);
    clip-path: inset(0 0);
  }
  &__banner {
    top: 0;
    width: 100%;
    height: calc(var(--banner-height) + var(--navbar-height));
    background-position: center 25%;
    background-size: cover;
    position: fixed;
  }
  &__banner-shade {
    -webkit-backdrop-filter: blur(4px);
    backdrop-filter: blur(4px);
    background: var(--banner-overlay-gradient);
    bottom: 0;
    height: auto;
    left: 0;
    pointer-events: none;
    position: absolute;
    right: 0;
    top: 0;
    width: auto;
  }
  &__content {
    display: flex;
    // flex-direction: column;
    gap: 16px;
    max-width: 1200px;
    position: relative;
    margin-top: 16px;
    flex: 0 1 auto;
  }
  &__header {
    // height: calc(var(--banner-height) - 16px);
    display: flex;
    gap: 1rem;
  }
  &__headline {
    &-wrp {
      height: calc(var(--banner-height) - 16px);
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }
    overflow-wrap: anywhere;
    width: 100%;
    line-height: 1.1em;
    user-select: none;
    font-weight: 600;
    text-shadow: rgba(0, 0, 0, 0.3) 1px 2px 4px;
  }
  &__tag {
    cursor: pointer;
    text-shadow: rgba(0, 0, 0, 0.3) 1px 2px 4px;
    border: 1px solid var(--stp-foreground_muted-alpha_tertiary);
    height: fit-content;
    width: fit-content;
    white-space: nowrap;
    &:hover {
      border-color: var(--stp-foreground_muted);
    }
  }
  &__show-description {
    background: linear-gradient(0deg, var(--stp-background) 0%, rgba(255, 255, 255, 0) 100%);
    &:hover {
      background: linear-gradient(
        0deg,
        var(--stp-background-alpha_secondary) 0%,
        rgba(255, 255, 255, 0) 100%
      );
    }
  }
}

.sticky-header {
  position: sticky;
  top: calc(var(--header-height) + 17px);
}

